feat: Implement and refactor artist queries
